imiv-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(a) {return a;},
      peg$c1 = ";",
      peg$c2 = peg$literalExpectation(";", false),
      peg$c3 = function(a, b) {
        if(a.length > 0) b.metadata = a;
        return b;
      },
      peg$c4 = "vocabulary",
      peg$c5 = peg$literalExpectation("vocabulary", false),
      peg$c6 = function(a) {
        return {
          "type" : "vocabulary",
          "data" : a
        };
      },
      peg$c7 = "deprecated",
      peg$c8 = peg$literalExpectation("deprecated", false),
      peg$c9 = "class",
      peg$c10 = peg$literalExpectation("class", false),
      peg$c11 = function(a, b, c) {
        var obj = b;
        obj.type = "class";
        if(c.length > 0) obj.restriction = c;
        if(a) obj.deprecated = true;
        return obj;
      },
      peg$c12 = "property",
      peg$c13 = peg$literalExpectation("property", false),
      peg$c14 = function(a, b, c) {
        var obj = b;
        obj.type = "property";
        if(c && c.length > 0) obj.restriction = c;
        if(a) obj.deprecated = true;
       return obj;
      },
      peg$c15 = "set",
      peg$c16 = peg$literalExpectation("set", false),
      peg$c17 = ">",
      peg$c18 = peg$literalExpectation(">", false),
      peg$c19 = function(a, b, c, d) {
        var obj = {
          type :"set",
          class : b,
          property : c
        };
        if(d.length > 0) obj.restriction = d;
        if(a) obj.deprecated = true;
       return obj;
      },
      peg$c20 = "datamodel",
      peg$c21 = peg$literalExpectation("datamodel", false),
      peg$c22 = function(a) {
          var obj = {
            type :"datamodel"
          };
          if(a.length > 0) obj.restriction = a;
         return obj;
        },
      peg$c23 = "use",
      peg$c24 = peg$literalExpectation("use", false),
      peg$c25 = function(a, b) {
        var obj = {
          type : "use",
          class : a
        };
        if(b.length > 0 ){
          var f = a;
          while(f.next) f = f.next;
          f.restriction = b;
        }
        return obj;
      },
      peg$c26 = function(a, b, c, d) {
          var obj = {type:a,data:d};
          if(b) obj.group = b;
          if(c) obj.language = c;
          return obj;
        },
      peg$c27 = function(a, b, c, d) {
          var obj = d;
          obj.type = a;
          if(b) obj.group = b;
          if(c) obj.language = c;
          return obj;
        },
      peg$c28 = function(a, b) {
        a.data = b;
        return a;
      },
      peg$c29 = "{",
      peg$c30 = peg$literalExpectation("{", false),
      peg$c31 = "}",
      peg$c32 = peg$literalExpectation("}", false),
      peg$c33 = function(a) {return {type:"pattern",data:a};},
      peg$c34 = "..",
      peg$c35 = peg$literalExpectation("..", false),
      peg$c36 = function(min, max) {return {type:"cardinality",min:min,max:max};},
      peg$c37 = "n",
      peg$c38 = peg$literalExpectation("n", false),
      peg$c39 = function(min) {return {type:"cardinality",min:min};},
      peg$c40 = "@",
      peg$c41 = peg$literalExpectation("@", false),
      peg$c42 = function(a) {a.type = "type"; return a;},
      peg$c43 = "=",
      peg$c44 = peg$literalExpectation("=", false),
      peg$c45 = function(a) {return {type:"eq",data:a};},
      peg$c46 = function(a) {return {type:"gt",data:a};},
      peg$c47 = ">=",
      peg$c48 = peg$literalExpectation(">=", false),
      peg$c49 = function(a) {return {type:"ge",data:a};},
      peg$c50 = "<",
      peg$c51 = peg$literalExpectation("<", false),
      peg$c52 = function(a) {return {type:"lt",data:a};},
      peg$c53 = "<=",
      peg$c54 = peg$literalExpectation("<=", false),
      peg$c55 = function(a) {return {type:"le",data:a};},
      peg$c56 = "$",
      peg$c57 = peg$literalExpectation("$", false),
      peg$c58 = function(a) {return {type:"charset",data:a};},
      peg$c59 = "#",
      peg$c60 = peg$literalExpectation("#", false),
      peg$c61 = function(a) {return {type:"order",data:a};},
      peg$c62 = function(a, b, c) {if(b)a.next=b;if(c)a.language=c;return a;},
      peg$c63 = function(a, b) {if(b)a.group = b; return a;},
      peg$c64 = ":",
      peg$c65 = peg$literalExpectation(":", false),
      peg$c66 = function(prefix) {return {prefix:prefix};},
      peg$c67 = function(a, b) {a.name = b; return a;},
      peg$c68 = "[",
      peg$c69 = peg$literalExpectation("[", false),
      peg$c70 = /^[^\]]/,
      peg$c71 = peg$classExpectation(["]"], true, false),
      peg$c72 = "]",
      peg$c73 = peg$literalExpectation("]", false),
      peg$c74 = function(a) {return a.join("");},
      peg$c75 = function(a, b) {
          if(b) a.next = b;
          return a;
        },
      peg$c76 = function(prefix, name) {return {prefix:prefix,name:name};},
      peg$c77 = function(a) {return a ? a : "description";},
      peg$c78 = "/*",
      peg$c79 = peg$literalExpectation("/*", false),
      peg$c80 = /^[^*]/,
      peg$c81 = peg$classExpectation(["*"], true, false),
      peg$c82 = "*/",
      peg$c83 = peg$literalExpectation("*/", false),
      peg$c84 = function(a) {return a.join("").trim();},
      peg$c85 = "*",
      peg$c86 = peg$literalExpectation("*", false),
      peg$c87 = /^[^\/]/,
      peg$c88 = peg$classExpectation(["/"], true, false),
      peg$c89 = function(a) {return "*" + a;},
      peg$c90 = "//",
      peg$c91 = peg$literalExpectation("//", false),
      peg$c92 = /^[^\n]/,
      peg$c93 = peg$classExpectation(["\n"], true, false),
      peg$c94 = function(chars) {return chars.join("").trim();},
      peg$c95 = "\"",
      peg$c96 = peg$literalExpectation("\"", false),
      peg$c97 = /^[^"]/,
      peg$c98 = peg$classExpectation(["\""], true, false),
      peg$c99 = function(chars) {return chars.join("");},
      peg$c100 = "\\\"",
      peg$c101 = peg$literalExpectation("\\\"", false),
      peg$c102 = function() {return '"';},
      peg$c103 = "'",
      peg$c104 = peg$literalExpectation("'", false),
      peg$c105 = /^[^']/,
      peg$c106 = peg$classExpectation(["'"], true, false),
      peg$c107 = "\\'",
      peg$c108 = peg$literalExpectation("\\'", false),
      peg$c109 = function() {return "'";},
      peg$c110 = function(a) {return parseInt(a.join(""));},
      peg$c111 = "/",
      peg$c112 = peg$literalExpectation("/", false),
      peg$c113 = "\\/",
      peg$c114 = peg$literalExpectation("\\/", false),
      peg$c115 = function() {return "\/";},
      peg$c116 = function(head, body) {return head + (body ? body.join("") : "");},
      peg$c117 = function(a, b) {return a + b;},
      peg$c118 = /^[a-zA-Z_\xC0-\xD6\xD8-\xF6\xF8-\u02FF\u0370-\u037D\u037F-\u1FFF\u200C-\u200D\u2070-\u218F\u2C00-\u2FEF\u3001-\uD7FF\uF900-\uFDCF\uFDF0-\uFFFD]/,
      peg$c119 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["\xC0", "\xD6"], ["\xD8", "\xF6"], ["\xF8", "\u02FF"], ["\u0370", "\u037D"], ["\u037F", "\u1FFF"], ["\u200C", "\u200D"], ["\u2070", "\u218F"], ["\u2C00", "\u2FEF"], ["\u3001", "\uD7FF"], ["\uF900", "\uFDCF"], ["\uFDF0", "\uFFFD"]], false, false),
      peg$c120 = /^[.\-0-9\xB7\u0300-\u036F\u203F-\u2040]/,
      peg$c121 = peg$classExpectation([".", "-", ["0", "9"], "\xB7", ["\u0300", "\u036F"], ["\u203F", "\u2040"]], false, false),
      peg$c122 = /^[0-9]/,
      peg$c123 = peg$classExpectation([["0", "9"]], false, false),
      peg$c124 = "\n",
      peg$c125 = peg$literalExpectation("\n", false),
      peg$c126 = peg$anyExpectation(),
      peg$c127 = /^[\t\n\r -\uD7FF\uE000-\uFFFD]/,
      peg$c128 = peg$classExpectation(["\t", "\n", "\r", [" ", "\uD7FF"], ["\uE000", "\uFFFD"]], false, false),
      peg$c129 = /^[a-zA-Z]/,
      peg$c130 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c131 = /^[ \t\r\n\f]/,
      peg$c132 = peg$classExpectation([" ", "\t", "\r", "\n", "\f"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsestatement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsestatement();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseIGNORE();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatement() {
    var s0;

    s0 = peg$parsevocabularyStatement();
    if (s0 === peg$FAILED) {
      s0 = peg$parsedatamodelStatement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseclassStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parsepropertyStatement();
          if (s0 === peg$FAILED) {
            s0 = peg$parsesetStatement();
            if (s0 === peg$FAILED) {
              s0 = peg$parseuseStatement();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsevocabularyStatement() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseIGNORE();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsemetadata();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsemetadata();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIGNORE();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsevocabulary();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseIGNORE();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s6 = peg$c1;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c2); }
              }
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c3(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsevocabulary() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseIGNORE();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 10) === peg$c4) {
        s2 = peg$c4;
        peg$currPos += 10;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIGNORE();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsequotedLiteral();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseclassStatement() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseIGNORE();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsemetadata();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsemetadata();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIGNORE();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseclass();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseIGNORE();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s6 = peg$c1;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c2); }
              }
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c3(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseclass() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
